--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chioma Egbo | Virtual Assistant & Tech Enthusiast</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #fdfdfd;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(120deg, #6a11cb, #2575fc);
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+    }
+    nav {
+      text-align: center;
+      background: #333;
+      padding: 0.8rem;
+    }
+    nav a {
+      color: white;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+    }
+    h2 {
+      color: #2575fc;
+      margin-bottom: 1rem;
+    }
+    .skills, .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
+    .card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 1rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: 0.3s;
+    }
+    .card:hover {
+      transform: scale(1.03);
+    }
+    footer {
+      text-align: center;
+      background: #333;
+      color: white;
+      padding: 1.5rem;
+      margin-top: 2rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Chioma Egbo</h1>
+    <p>Virtual Assistant | Python & HTML Enthusiast | Tech-Savvy Support</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Hello! I'm Chioma, a Virtual Assistant skilled in communication, scheduling, research, and tech tools. I also code in <b>Python</b> and <b>HTML</b>, combining VA expertise with technical skills to deliver smart and reliable support for clients.</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills">
+      <div class="card">📧 Email & Calendar Management</div>
+      <div class="card">📊 Research & Data Entry</div>
+      <div class="card">💻 Python Scripting</div>
+      <div class="card">🌐 HTML Web Pages</div>
+      <div class="card">🗂️ Task & Project Management</div>
+      <div class="card">🤝 Customer Service</div>
+    </div>
+  </section>
+
+  <section id="portfolio">
+    <h2>Portfolio</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>HTML Coding Playground</h3>
+        <p>A custom coding environment I built and hosted for learning HTML.</p>
+        <a href="https://github.com/chiomaegbo27-lang/html-playground" target="_blank">View Project</a>
+      </div>
+      <div class="card">
+        <h3>Python Automation</h3>
+        <p>Scripts to automate repetitive VA tasks like data entry & scheduling.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>📧 chiomaegbo27@gmail.com</p>
+    <p>📱 +2348140933257</p>
+    <p><a href="https://github.com/chiomaegbo27" target="_blank">GitHub Profile</a></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Chioma Egbo | Built with ❤️ using GitHub Pages</p>
+  </footer>
+</body>
+</html>
 
