--- a/index.html
+++ b/index.html
@@ -1,59 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chioma Egbo - Portfolio</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
-    header { background: #222; color: #fff; padding: 20px; text-align: center; }
-    section { max-width: 800px; margin: 40px auto; padding: 20px; background: #fff; border-radius: 8px; }
-    h1, h2 { color: #222; }
-    a { color: #0073e6; text-decoration: none; }
-    footer { text-align: center; padding: 20px; background: #eee; margin-top: 40px; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chioma Egbo — Virtual Assistant</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css" />
+  <script defer src="js/script.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Chioma Egbo</h1>
-    <p>Virtual Assistant | Python & HTML Skilled | Business Support</p>
+  <!-- NAVBAR -->
+  <header class="site-header">
+    <a class="brand" href="index.html">Chioma<span>Egbo</span></a>
+    <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
+    <nav class="site-nav">
+      <a class="active" href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>
-      I help busy professionals and entrepreneurs streamline their work, manage schedules, 
-      and stay organized — while also supporting with technical skills in Python, HTML, and automation.
-    </p>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container reveal">
+      <p class="eyebrow">Virtual Assistant • Python • HTML</p>
+      <h1>Helping busy professionals stay <span class="accent">organized</span> & get more done.</h1>
+      <p class="lead">I combine strong VA skills (calendar, inbox, research, customer care) with tech—Python automations & HTML formatting—to streamline your workflow.</p>
+      <div class="cta-row">
+        <a class="btn primary" href="projects.html">View Projects</a>
+        <a class="btn ghost" href="contact.html">Hire Me</a>
+      </div>
+      <ul class="badges">
+        <li>Email & Calendar</li>
+        <li>Research & Data Entry</li>
+        <li>Python Automation</li>
+        <li>HTML Editing</li>
+        <li>Trello • Notion • ClickUp</li>
+      </ul>
+    </div>
   </section>
 
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>Virtual Assistant: Email & Calendar Management, Research, Data Entry, Social Media Support</li>
-      <li>Technical: Python, HTML, Google Workspace, Trello, Notion, Canva</li>
-    </ul>
+  <!-- HIGHLIGHTS -->
+  <section class="highlights">
+    <div class="container grid-3">
+      <div class="card reveal">
+        <h3>Inbox & Calendar</h3>
+        <p>Zero-inbox systems, scheduling across time zones, and SOPs that keep your day smooth.</p>
+      </div>
+      <div class="card reveal">
+        <h3>Research & Docs</h3>
+        <p>Competitive research, data cleaning, spreadsheets, and polished client-ready documents.</p>
+      </div>
+      <div class="card reveal">
+        <h3>Tech Edge</h3>
+        <p>Python scripts for repetitive tasks and HTML for web formatting & content updates.</p>
+      </div>
+    </div>
   </section>
 
-  <section>
-    <h2>Portfolio</h2>
-    <p>Here are some of my featured projects:</p>
-    <ul>
-      <li><a href="https://github.com/chiomaegbo27/VA-Samples">📂 VA Work Samples</a></li>
-      <li><a href="https://github.com/chiomaegbo27/Python-Automations">🐍 Python Scripts</a></li>
-      <li><a href="https://github.com/chiomaegbo27/HTML-Portfolio">💻 HTML Demo</a></li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:chiomaegbo27@gmail.com">chiomaegbo27@gmail.com</a></p>
-    <p>WhatsApp: +2348140933257</p>
-    <p>LinkedIn: <a href="#">Add your LinkedIn here</a></p>
-  </section>
-
-  <footer>
-    <p>© 2025 Chioma Egbo | Portfolio</p>
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> Chioma Egbo • Built on GitHub Pages</p>
+      <div class="socials">
+        <a href="https://github.com/chiomaegbo27" target="_blank" rel="noopener">GitHub</a>
+        <!-- Add LinkedIn/YouTube later -->
+      </div>
+    </div>
   </footer>
 </body>
 </html>
