--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/script.js"></script>
+  <!-- Inside <head> -->
+<link rel="stylesheet" href="css/style.css">
 </head>
+  <!-- Before </body> -->
+<script src="js/script.js"></script>
 <body>
   <!-- NAVBAR -->
   <header class="site-header">
