--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+<!-- Hero Section -->
+<section id="home" class="hero">
+  <div class="hero-content">
+    <h1>Hello, I’m <span>Chioma Egbo</span></h1>
+    <p>Virtual Assistant | Python Developer | HTML & Web Enthusiast</p>
+    <a href="projects.html" class="btn">View My Work</a>
+  </div>
+</section>
 
   <!-- HERO -->
   <section class="hero">
