--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/script.js"></script>
-  <!-- Inside <head> -->
-<link rel="stylesheet" href="css/style.css">
 </head>
-  <!-- Before </body> -->
-<script src="js/script.js"></script>
 <body>
   <!-- NAVBAR -->
   <header class="site-header">
@@ -24,20 +20,13 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-<!-- Hero Section -->
-<section id="home" class="hero">
-  <div class="hero-content">
-    <h1>Hello, I’m <span>Chioma Egbo</span></h1>
-    <p>Virtual Assistant | Python Developer | HTML & Web Enthusiast</p>
-    <a href="projects.html" class="btn">View My Work</a>
-  </div>
-</section>
 
   <!-- HERO -->
   <section class="hero">
     <div class="container reveal">
       <p class="eyebrow">Virtual Assistant • Python • HTML</p>
-      <h1>Helping busy professionals stay <span class="accent">organized</span> & get more done.</h1>
+      <h1>Hello, I’m <span class="accent">Chioma Egbo</span></h1>
+      <p class="lead">Helping busy professionals stay organized & get more done.</p>
       <p class="lead">I combine strong VA skills (calendar, inbox, research, customer care) with tech—Python automations & HTML formatting—to streamline your workflow.</p>
       <div class="cta-row">
         <a class="btn primary" href="projects.html">View Projects</a>
