--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <div class="container footer-inner">
       <p>© <span id="year"></span> Chioma Egbo • Built on GitHub Pages</p>
       <div class="socials">
-        <a href="https://github.com/chiomaegbo27" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/chiomaegbo27-lang" target="_blank" rel="noopener">GitHub</a>
+
         <!-- Add LinkedIn/YouTube later -->
       </div>
     </div>
