--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <a class="brand" href="index.html">Chioma<span>Egbo</span></a>
     <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
     <nav class="site-nav">
-      <a class="active" href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
