--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — Chioma Egbo</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+  <title>About Me — Chioma Egbo</title>
+  <link rel="stylesheet" href="css/style.css">
   <script defer src="js/script.js"></script>
 </head>
 <body>
+  <!-- NAVBAR -->
   <header class="site-header">
     <a class="brand" href="index.html">Chioma<span>Egbo</span></a>
     <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
@@ -20,44 +20,20 @@
     </nav>
   </header>
 
-  <section class="page-hero">
+  <!-- ABOUT SECTION -->
+  <section class="about reveal">
     <div class="container">
       <h1>About Me</h1>
-      <p class="lead">Virtual Assistant with a technical edge—Python & HTML—plus strong communication and organization.</p>
+      <p>Hi, I’m Chioma Egbo, a Virtual Assistant with technical skills in Python, HTML, and productivity tools. I help busy professionals stay organized, manage tasks, and save time with tech-powered solutions.</p>
     </div>
   </section>
 
-  <section class="about-wrap">
-    <div class="container two-col">
-      <div class="about-image reveal">
-        <!-- Replace with your photo in assets/images/profile.jpg -->
-        <img src="https://picsum.photos/600/700?grayscale" alt="Chioma Egbo profile placeholder">
-      </div>
-      <div class="about-text reveal">
-        <h2>Hi, I'm Chioma 👋</h2>
-        <p>
-          I support entrepreneurs and teams with inbox & calendar management, research, data entry,
-          client communication, and content polishing. I also use Python to automate repetitive tasks
-          and HTML to format and update web content.
-        </p>
-        <h3>Tools I Use</h3>
-        <ul class="pill-list">
-          <li>Google Workspace</li><li>Microsoft Office</li><li>Trello</li><li>Notion</li><li>ClickUp</li><li>Canva</li>
-        </ul>
-        <h3>Tech</h3>
-        <ul class="pill-list">
-          <li>Python (automation, data cleaning)</li><li>HTML (content edits)</li><li>GitHub</li>
-        </ul>
-        <a class="btn primary" href="projects.html">See My Work</a>
-      </div>
-    </div>
-  </section>
-
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Chioma Egbo</p>
+      <p>© <span id="year"></span> Chioma Egbo • Built on GitHub Pages</p>
       <div class="socials">
-        <a href="https://github.com/chiomaegbo27" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/chiomaegbo27-lang" target="_blank" rel="noopener">GitHub</a>
       </div>
     </div>
   </footer>
