--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Chioma Egbo</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
   <script defer src="js/script.js"></script>
 </head>
 <body>
+  <!-- NAVBAR -->
   <header class="site-header">
     <a class="brand" href="index.html">Chioma<span>Egbo</span></a>
     <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
@@ -20,58 +20,31 @@
     </nav>
   </header>
 
-  <section class="page-hero">
+  <!-- PROJECTS SECTION -->
+  <section class="projects reveal">
     <div class="container">
-      <h1>Projects</h1>
-      <p class="lead">A mix of VA case studies and tech mini-projects.</p>
+      <h1>My Projects</h1>
+      <div class="project-card">
+        <h3>Email & Calendar Management</h3>
+        <p>Created efficient scheduling systems and zero-inbox workflows for professionals.</p>
+      </div>
+      <div class="project-card">
+        <h3>Python Automation</h3>
+        <p>Built scripts to automate repetitive admin tasks, saving clients hours weekly.</p>
+      </div>
+      <div class="project-card">
+        <h3>HTML Formatting</h3>
+        <p>Styled and formatted web content for small businesses and blogs.</p>
+      </div>
     </div>
   </section>
 
-  <section class="projects-grid">
-    <div class="container grid-3">
-      <!-- CARD 1 -->
-      <article class="card project reveal">
-        <div class="thumb">
-          <img src="https://picsum.photos/600/400?random=1" alt="HTML Playground preview">
-        </div>
-        <h3>HTML Coding Playground</h3>
-        <p>Interactive repo for students to practice HTML. Includes starter templates & instructions.</p>
-        <div class="actions">
-          <a class="btn ghost" href="https://github.com/chiomaegbo27-lang/html-playground" target="_blank" rel="noopener">View Repo</a>
-        </div>
-      </article>
-
-      <!-- CARD 2 -->
-      <article class="card project reveal">
-        <div class="thumb">
-          <img src="https://picsum.photos/600/400?random=2" alt="Python automation preview">
-        </div>
-        <h3>Python: CSV Cleaner</h3>
-        <p>Small script to clean and combine CSV files—useful for research & data entry tasks.</p>
-        <div class="actions">
-          <a class="btn ghost" href="#" aria-disabled="true">Repo (coming soon)</a>
-        </div>
-      </article>
-
-      <!-- CARD 3 -->
-      <article class="card project reveal">
-        <div class="thumb">
-          <img src="https://picsum.photos/600/400?random=3" alt="VA templates preview">
-        </div>
-        <h3>VA Templates Pack</h3>
-        <p>Research brief, content calendar, and calendar management SOP templates.</p>
-        <div class="actions">
-          <a class="btn ghost" href="#" aria-disabled="true">Repo (coming soon)</a>
-        </div>
-      </article>
-    </div>
-  </section>
-
+  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Chioma Egbo</p>
+      <p>© <span id="year"></span> Chioma Egbo • Built on GitHub Pages</p>
       <div class="socials">
-        <a href="https://github.com/chiomaegbo27" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/chiomaegbo27-lang" target="_blank" rel="noopener">GitHub</a>
       </div>
     </div>
   </footer>
