--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chioma Egbo — Virtual Assistant</title>
+  <title>Chioma Egbo — Virtual Assistant | Data Analyst | Web Developer</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/script.js"></script>
@@ -25,7 +25,7 @@
   <section id="home" class="hero reveal">
     <div class="hero-content">
       <h1>Hello, I’m <span>Chioma Egbo</span></h1>
-      <p>Virtual Assistant | Python Developer | HTML Enthusiast</p>
+      <p>Virtual Assistant | Data Analyst | Python Developer | HTML Enthusiast</p>
       <a href="projects.html" class="btn">View My Work</a>
     </div>
   </section>
