--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
   <!-- ABOUT SECTION -->
   <section class="about reveal">
-    <div class="container">
+    <div class="container reveal">
       <h1>About Me</h1>
       <p>Hi, I’m Chioma Egbo, a Virtual Assistant with technical skills in Python, HTML, and productivity tools. I help busy professionals stay organized, manage tasks, and save time with tech-powered solutions.</p>
     </div>
