--- a/about.html
+++ b/about.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Me — Chioma Egbo</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/script.js"></script>
 </head>
 <body>
-  <!-- NAVBAR -->
   <header class="site-header">
     <a class="brand" href="index.html">Chioma<span>Egbo</span></a>
     <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
@@ -20,21 +19,26 @@
     </nav>
   </header>
 
-  <!-- ABOUT SECTION -->
-  <section class="about reveal">
+  <section class="page">
     <div class="container reveal">
       <h1>About Me</h1>
-      <p>Hi, I’m Chioma Egbo, a Virtual Assistant with technical skills in Python, HTML, and productivity tools. I help busy professionals stay organized, manage tasks, and save time with tech-powered solutions.</p>
+      <p>I am <strong>Chioma Egbo</strong>, a detail-oriented Virtual Assistant with expertise in managing schedules, inboxes, and projects for professionals and entrepreneurs. Alongside my VA expertise, I have strong technical skills in <strong>Python</strong> (for data analysis and automation) and <strong>HTML</strong> (for content formatting and light web development).</p>
+
+      <h2>Skills</h2>
+      <ul>
+        <li>Email & Calendar Management</li>
+        <li>Internet Research & Data Entry</li>
+        <li>Python Automation & Data Cleaning</li>
+        <li>HTML/CSS Website Edits</li>
+        <li>Social Media Support</li>
+        <li>Tools: Trello, Notion, ClickUp, Canva</li>
+      </ul>
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Chioma Egbo • Built on GitHub Pages</p>
-      <div class="socials">
-        <a href="https://github.com/chiomaegbo27-lang" target="_blank" rel="noopener">GitHub</a>
-      </div>
+      <p>© <span id="year"></span> Chioma Egbo</p>
     </div>
   </footer>
 </body>
